--- a/index.html
+++ b/index.html
@@ -5,29 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Er Beti</title>
+    <h4>
+        <a href="https://www.realbetisbalompie.es/">Web Oficial</a>
+        <a href="https://shop.realbetisbalompie.es/es/">Tienda del Betis</a>
+    </h4>
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="shortcut icon" href="./imagenes/futbol.png" type="image/x-icon">
+
 </head>
 
-<body>
+<body style="background-image:url(./imagenes/28842.jpg);">
+
     <h5>1992-2010: REAL BETIS BALOMPIÉ, SOCIEDAD ANÓNIMA DEPORTIVA</h5>
 
     <p class="selector">Tras la reconversión en SAD, habrá que esperar a la llegada al banquillo de Lorenzo Serra en las últimas jornadas de la temporada 1993-94 para volver a ver el Betis en Primera División: El ascenso en Burgos de 1994 pone fin a tres años en la División
         de Plata. Con el mallorquín en el banquillo y la eclosión de los ingresos televisivos, el Betis vivirá tres años para el recuerdo: en la primera temporada tras el ascenso se convierte en el equipo revelación, finalizando en tercera posición de
-        la tabla; en la temporada 1996-97 repite entre los cuatro primeros y llega a la final de la Copa del Rey, cayendo ante el FC Barcelona en un partido resuelto en la prórroga. En aquella final jugaron Jaro, Jaime, Vidakovic, Ríos, Merino (Ureña,
-        64) Alexis, Nadj (Olías, Finidi, Cañas (Pier, 71) Jarni, Alfonso, con goles béticos de Alfonso y Finidi.</p>
+        la tabla; en la temporada 1996-97 repite entre los cuatro primeros y llega a la final de la Copa del Rey, cayendo ante <span>el FC Barcelona</span> en un partido resuelto en la prórroga. En aquella final jugaron Jaro, Jaime, Vidakovic, Ríos, Merino
+        (Ureña, 64) Alexis, Nadj (Olías, Finidi, Cañas (Pier, 71) Jarni, Alfonso, con goles béticos de
+        <h2>Alfonso y Finidi.</h2>
+    </p>
 
-    Tras la marcha de Serra, el Betis pasa por un periodo de inestabilidad que le lleva a descender en el 2000. Regresará la temporada siguiente como subcampeón de la Categoría de Plata, clasificándose para la Copa de la UEFA con Juande Ramos en el banquillo
-    la 2001-2002. No obstante, la falta de continuidad lo llevará a dos años mediocres hasta que se produce la vuelta de Serra. Con este nuevamente en el banquillo, 2005 se convierte en el año del Betis: el club verdiblanco finalizó en cuarta posición
-    en la tabla y ganó la Copa del Rey de fútbol 2004-05 en el Vicente Calderón, ante el CA Osasuna por 2-1 (goles de Oliveira y Dani), alineándose: Doblas, Melli, Rivas (Lembo, 78), Juanito, Luis Fernández, Arzu (Varela, 67), Marcos Assunçao, Joaquín,
-    Fernando, Edu (Dani, 89) y Oliveira. Dos meses más tarde, se convirtió en el primer equipo andaluz que se clasificó para disputar la Copa de Europa bajo el formato de Liga de Campeones al superar en la eliminatoria previa al AS Mónaco -subcampeón
-    de la edición de 2004-, y disputó la fase de grupos encuadrado en el grupo del campeón defensor del título, el Liverpool FC, el campeón de la Premier League inglesa, el Chelsea FC, y el Anderlecht belga. Serra no es renovado y el verano de 2006 supone
-    el arranque de una crisis desconocida desde finales de los 80, comenzando un deterioro institucional, social y deportivo que coincide con la imputación del máximo accionista Manuel Ruiz de Lopera por presunto delito societario. Tras conseguir la permanencia
-    con apuros en tres temporadas consecutivas, el Betis desciende a Segunda División el 31 de mayo de 2009. 15 días después del descenso, más de 65.000 béticos se manifiestan reclamando un cambio institucional y la marcha del máximo accionista. Aquel
-    día sería recordado como el 15-J, manifestación decisiva en el devenir histórico de la entidad. En paralelo, se desarrolla la fase de instrucción de la querella por delito societario presentada contra éste por las asociaciones Liga de Juristas Béticos,
-    Por Nuestro Betis y Béticos por el Villamarín, con la jueza Mercedes Alaya en la instrucción del caso. En la Temporada 2009-10 se roza el ascenso, pero el equipo se quedaría un año más en Segunda División tras apurar sus opciones de ascenso hasta
-    la última jornada de Liga. Ruiz de Lopera intentó vender ese verano su paquete de acciones a un grupo externo al Betis, pero la jueza instructora paralizó dicha venta para, posteriormente, trasladar los derechos políticos de las acciones a una administración
-    judicial. Ya comenzada la Liga 2010-11, y en una situación económica muy complicada, Rafael Gordillo accede al cargo de presidente bajo el modelo de la administración judicial. Se asciende esa temporada a la Liga BBVA y se mantiene la categoría durante
-    tres temporadas, con una clasificación para la UEFA Europa League. Lamentablemente, el equipo vuelve a descender y se suceden diferentes béticos en la Presidencia de la entidad.
+    Tras la marcha de Serra, el <b>Betis</b> pasa por un periodo de inestabilidad que le lleva a descender en el 2000. Regresará la temporada siguiente como subcampeón de la Categoría de Plata, clasificándose para la Copa de la UEFA con Juande Ramos en
+    el banquillo la 2001-2002. No obstante, la falta de continuidad lo llevará a dos años mediocres hasta que se produce la vuelta de Serra. Con este nuevamente en el banquillo, 2005 se convierte en el año del Betis: el club verdiblanco finalizó en cuarta
+    posición en la tabla y ganó la Copa del Rey de fútbol 2004-05 en el Vicente Calderón, ante el CA Osasuna por 2-1 (goles de Oliveira y Dani), alineándose: Doblas, Melli, Rivas (Lembo, 78), Juanito, Luis Fernández, Arzu (Varela, 67), Marcos Assunçao,
+    Joaquín, Fernando, Edu (Dani, 89) y Oliveira. <span>Dos meses más tarde,</span> se convirtió en el primer equipo andaluz que se clasificó para disputar la Copa de Europa bajo el formato de Liga de Campeones al superar en la eliminatoria previa al
+    AS Mónaco -subcampeón de la edición de 2004-, y disputó la fase de grupos encuadrado en el grupo del campeón defensor del título, el Liverpool FC, el campeón de la Premier League inglesa, el Chelsea FC, y el Anderlecht belga. Serra no es renovado
+    y el verano de 2006 supone el arranque de una crisis desconocida desde finales de los 80, comenzando un deterioro institucional, social y deportivo que coincide con la imputación del máximo accionista Manuel Ruiz de Lopera por presunto delito societario.
+    Tras conseguir la permanencia con apuros en tres temporadas consecutivas, el Betis desciende a Segunda División el 31 de mayo de 2009. 15 días después del descenso, más de 65.000 béticos se manifiestan reclamando un cambio institucional y la marcha
+    del máximo accionista. Aquel día sería recordado como el 15-J, manifestación decisiva en el devenir histórico de la entidad. En paralelo, se desarrolla la fase de instrucción de la querella por delito societario presentada contra éste por las asociaciones
+    Liga de Juristas Béticos, Por Nuestro Betis y Béticos por el Villamarín, con la jueza Mercedes Alaya en la instrucción del caso. En la Temporada 2009-10 se roza el ascenso, pero el equipo se quedaría un año más en Segunda División tras apurar sus
+    opciones de ascenso hasta la última jornada de Liga. Ruiz de Lopera intentó vender ese verano su paquete de acciones a un grupo externo al Betis, pero la jueza instructora paralizó dicha venta para, posteriormente, trasladar los derechos políticos
+    de las acciones a una administración judicial. Ya comenzada la
+    <h2>Liga 2010-11</h2> , y en una situación económica muy complicada, Rafael Gordillo accede al cargo de presidente bajo el modelo de la administración judicial. Se asciende esa temporada a la Liga BBVA y se mantiene la categoría durante tres temporadas,
+    con una clasificación para la <b>UEFA Europa League</b>. Lamentablemente, el equipo vuelve a descender y se suceden diferentes béticos en la Presidencia de la entidad.
 
     <h5>2010-ACTUALIDAD: EL REAL BETIS BALOMPIÉ DE LOS BÉTICOS</h5>
     Tras ser levantadas parcialmente las medidas cautelares en el verano de 2015, los accionistas de referencia Ángel Haro García y José Miguel López Catalán ganan la junta general extraordinaria de accionistas del 23 de septiembre con el apoyo masivo de
@@ -35,28 +46,20 @@
     La adaptación de un club histórico al fútbol del siglo XXI con la única premisa de colocar al Real Betis Balompié en sus diferentes facetas a la altura de su inigualable afición. En base a este impulso, el Real Betis va consolidando un notable crecimiento
     en todos los sectores. Fruto de ello es el éxito deportivo obtenido en la temporada 2017-18, en la que retorna de nuevo a las competiciones continentales después de completar un curso extraordinario en el que sumó 60 puntos y alcanzó el sexto puesto
     de la clasificación. Un lugar privilegiado al que se hizo merecedor por su juego fluido, su apuesta por el balón, su propuesta dominadora y su valentía en cada encuentro. Un brillante ejercicio que, además, permitió vivir algunos momentos que ya forman
-    parte de la historia. Recuerdos tan agradables como el triunfo en el campo del Real Madrid, campeón de Europa, y la goleada deslumbrante por 3-5 en el feudo del eterno rival. Este logro era, sin duda, la primera confirmación de los objetivos propuestos
-    por los máximos dirigentes de la entidad, Ángel Haro y José Miguel López Catalán, desde el momento mismo de su llegada a la entidad. Un ambicioso proyecto que incluía la unidad del beticismo, la regeneración de la entidad, la normalización institucional,
-    la devolución del protagonismo a los socios y accionistas, el crecimiento económico del club, la mejora y ampliación de las instalaciones del estadio Benito Villamarín y la apuesta por un proyecto deportivo que hiciera regresar los triunfos y llevara
-    de nuevo al equipo a las competiciones europeas. Para ello, resultó decisivo en el orden deportivo que volviera al club Lorenzo Serra Ferrer, nombrado vicepresidente deportivo de la entidad. Un nombre de culto entre la afición. Al frente del equipo
-    se situó a Quique Setién, un entrenador que se distingue por proponer un juego de posesión, combinativo y estético, en el que su equipo lleve el protagonismo y domine los partidos. Con ellos, el Real Betis hizo una decidida apuesta por un estilo de
-    juego que se aproximara a la demanda de los aficionados. Una idea de fútbol que a partir de ese momento se extendería asimismo a los diferentes escalafones de la Cantera verdiblanca. Antes de dar comienzo la temporada se inaugura oficialmente el nuevo
-    Gol Sur de Heliópolis. El punto y final a una magna obra que duró un año y que permitió reemplazar la vieja gradona de 1972. Una transformación radical que se vio complementada con importantes mejoras estéticas y técnicas que le otorgaron una imagen
-    más moderna y vanguardista al coliseo bético. El color verde y las formas triangulares del escudo se adueñaron del interior del estadio, que también presentaba una nueva iluminación con soluciones mucho más sostenibles. La afición, satisfecha, celebró
-    extasiada esa nueva colosal tribuna que convertía al estadio Benito Villamarín, con capacidad para 60.721 espectadores, en el cuarto campo con mayor aforo de la Liga en España tras el Camp Nou, el Santiago Bernabéu y el Wanda Metropolitano. Un logro
-    singular al que siguió otro momento estelar en la historia del club. El vivido el 23 de noviembre de 2017, fecha en que se celebró una Junta General Ordinaria de Accionistas que entraría en la historia de la entidad. Una cita fundamental, ya que en
-    ella los accionistas del Real Betis aprobaron por mayoría abrumadora el acuerdo suscrito por el club con Manuel Ruiz de Lopera y Bitton Sport, que permitió la compra de las acciones de estos y sirvió para cerrar el largo litigio judicial que tanto
-    lastraba el desarrollo de la institución. De este acuerdo ratificado por el accionariado bético nacería el proceso de venta de acciones con el que la entidad consiguió democratizarse al máximo con una gran atomización de los títulos. El Betis de los
-    béticos. En esa Junta General, el presidente Ángel Haro dijo: “Comenzamos un proceso ilusionante para que los béticos sean los dueños de su club. Serán los accionistas, sus hijos, nietos y todos aquellos socios que quieran los que puedan comprar un
-    trozo de Betis. El Betis será de los béticos”. Esa temporada 2017-18 creció de manera significativa el valor económico y deportivo de la plantilla profesional del Real Betis con fichajes tan destacados como, entre otros, los de los jugadores Andrés
-    Guardado, Cristian Tello, Zou Feddal, Antonio Barragán, Ryad Boudebouz y Javi García. Un completísimo cuadro de jugadores al que se han unido al inicio de la campaña 2018-19 otros importantes nombre de referencia como William Carvalho, Pau López,
-    Takashi Inui, Sergio Canales, Gio Lo Celso, Sidnei Rechel y Joel Robles. Una suma de valores que augura las mayores ilusiones para la afición bética. Esta línea de crecimiento deportivo ha continuado de cara a la temporada 2019-20, con la llegada
-    de jugadores de alto nivel como Nabil Fekir, Dani Martín, Alfonso Pedraza, Borja Iglesias, Álex Moreno y Juanmi Jiménez. Junto a todo esto, el Real Betis Balompié dirigido por Ángel Haro y José Miguel López Catalán se ha convertido en las últimas
-    temporadas en un club multidisciplinar que incluye nuevas secciones que potencian aún más si cabe el nombre de la entidad y permiten un desarrollo deportivo como no se había conocido en la ciudad de Sevilla. El club cuenta con un equipo femenino en
-    la máxima categoría del fútbol español, el Real Betis Féminas, y, asimismo, dispone de un equipo de baloncesto, el Coosur Real Betis, que juega en la Liga Endesa y otro de Fútbol Sala, el Real Betis Futsal, que juega en el segundo escalón nacional
-    de la LNFS.
+    parte de la historia. Para ello, resultó decisivo en el orden deportivo que volviera al club Lorenzo Serra Ferrer, nombrado vicepresidente deportivo de la entidad. Un nombre de culto entre la afición. Al frente del equipo se situó a Quique Setién,
+    un entrenador que se distingue por proponer un juego de posesión, combinativo y estético, en el que su equipo lleve el protagonismo y domine los partidos. Con ellos, el Real Betis hizo una decidida apuesta por un estilo de juego que se aproximara
+    a la demanda de los aficionados. Una idea de fútbol que a partir de ese momento se extendería asimismo a los diferentes escalafones de la Cantera verdiblanca. Antes de dar comienzo la temporada se inaugura oficialmente el nuevo
+    <b>Gol Sur de Heliópolis</b>. El punto y final a una magna obra que duró un año y que permitió reemplazar la vieja gradona de 1972. Una transformación radical que se vio complementada con importantes mejoras estéticas y técnicas que le otorgaron una
+    imagen más moderna y vanguardista al coliseo bético. El color verde y las formas triangulares del escudo se adueñaron del interior del estadio, que también presentaba una nueva iluminación con soluciones mucho más sostenibles. La afición, satisfecha,
+    celebró extasiada esa nueva colosal tribuna que convertía al estadio Benito Villamarín, con capacidad para 60.721 espectadores, en el cuarto campo con mayor aforo de la Liga en España tras el Camp Nou, el Santiago Bernabéu y el Wanda Metropolitano.
+    Un logro singular al que siguió otro momento estelar en la historia del club. El vivido el 23 de noviembre de 2017, fecha en que se celebró una Junta General Ordinaria de Accionistas que entraría en la historia de la entidad. Una cita fundamental,
+    ya que en ella los accionistas del Real Betis aprobaron por mayoría abrumadora el acuerdo suscrito por el club con Manuel Ruiz de Lopera y Bitton Sport, que permitió la compra de las acciones de estos y sirvió para cerrar el largo litigio judicial
+    que tanto lastraba el desarrollo de la institución. De este acuerdo ratificado por el accionariado bético nacería el proceso de venta de acciones con el que la entidad consiguió democratizarse al máximo con una gran atomización de los títulos. El
+    Betis de los béticos. En esa Junta General, el presidente Ángel Haro dijo:
+    <h2>“Comenzamos un proceso ilusionante para que los béticos sean los dueños de su club. Serán los accionistas, sus hijos, nietos y todos aquellos socios que quieran los que puedan comprar un trozo de Betis. </h2>
 
     <h3>En suma, la ilusionante realidad del nuevo Real Betis Balompié. Un club que no para de crecer, que ha mejorado sensiblemente todos sus indicadores deportivos, económicos y sociales y que ha elevado su valor hasta límites desconocidos.</h3>
+    <img src="./imagenes/jugaron-futbolistas-betis-30_g.jpg" alt="el beti">
 </body>
 
 </html>
