--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Er Beti</title>
+    <title>Document</title>
     <h4>
         <a href="https://www.realbetisbalompie.es/">Web Oficial</a>
         <a href="https://shop.realbetisbalompie.es/es/">Tienda del Betis</a>
     </h4>
-    <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="shortcut icon" href="./imagenes/futbol.png" type="image/x-icon">
+
 
 </head>
 
-<body style="background-image:url(./imagenes/28842.jpg);">
+<body>
 
     <h5>1992-2010: REAL BETIS BALOMPIÉ, SOCIEDAD ANÓNIMA DEPORTIVA</h5>
 
@@ -59,7 +58,6 @@
     <h2>“Comenzamos un proceso ilusionante para que los béticos sean los dueños de su club. Serán los accionistas, sus hijos, nietos y todos aquellos socios que quieran los que puedan comprar un trozo de Betis. </h2>
 
     <h3>En suma, la ilusionante realidad del nuevo Real Betis Balompié. Un club que no para de crecer, que ha mejorado sensiblemente todos sus indicadores deportivos, económicos y sociales y que ha elevado su valor hasta límites desconocidos.</h3>
-    <img src="./imagenes/jugaron-futbolistas-betis-30_g.jpg" alt="el beti">
 </body>
 
 </html>
