--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./imagenes/futbol.png" type="image/x-icon">
+    <title>Real Betis Balompié</title>
     <h4>
         <a href="https://www.realbetisbalompie.es/">Web Oficial</a>
         <a href="https://shop.realbetisbalompie.es/es/">Tienda del Betis</a>
@@ -58,6 +60,9 @@
     <h2>“Comenzamos un proceso ilusionante para que los béticos sean los dueños de su club. Serán los accionistas, sus hijos, nietos y todos aquellos socios que quieran los que puedan comprar un trozo de Betis. </h2>
 
     <h3>En suma, la ilusionante realidad del nuevo Real Betis Balompié. Un club que no para de crecer, que ha mejorado sensiblemente todos sus indicadores deportivos, económicos y sociales y que ha elevado su valor hasta límites desconocidos.</h3>
+
+    <img src="./imagenes/jugaron-futbolistas-betis-30_g.jpg" alt="">
+
 </body>
 
 </html>
